--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,15 @@ before_install:
   - docker build -t ankur/docker-react -f Dockerfile.dev .
 script:
   - docker run ankur/docker-react npm run test -- --coverage
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-central-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-central-1-239962828330"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
